--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -5,4 +5,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<span>@Html.ActionLink("<< Customers", "Index", "Customers")</span>
+
 <h2>@Model.Name</h2>
