--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -26,6 +26,7 @@ else
         <thead>
         <tr>
             <th>Customer</th>
+            <th>Birth Year</th>
         </tr>
         </thead>
         <tbody>
@@ -33,6 +34,8 @@ else
         {
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
+                <td>@customer.BirthYear</td>
+                
             </tr>
         }
         </tbody>
