--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -1,14 +1,5 @@
 ﻿@model IEnumerable<Vidly.Models.Customer>
-@*
-    Note: I've set the model for this view to IEnumerable<Customer>.
-    This is a simple interface implemented by the list class. Since
-    in this view we only want to iterate over this list, and we don't
-    need any of the operations in the List class (eg Add, Remove, etc),
-    it's better to use the IEnumerable interface, which allows use to
-    iterate over the list. If in the future, we replace the List with a
-    different data structure, as long as it is enumerable, our view code
-    will remain unchanged.
-*@
+
 
 @{
     ViewBag.Title = "Customers";
@@ -26,15 +17,15 @@ else
         <thead>
         <tr>
             <th>Customer</th>
-            <th>Birth Year</th>
+            <th>Discount Rate</th>
         </tr>
         </thead>
-        <tbody>
+        <tbody> 
         @foreach (var customer in Model)
         {
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
-                <td>@customer.BirthYear</td>
+                <td>@customer.MembershipType.DiscountRate%</td>
                 
             </tr>
         }
