--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Vidly.Models.Movie>
+﻿@using System.Web.UI.WebControls
+@model IEnumerable<Vidly.Models.Movie>
 
 @{
     ViewBag.Title = "Movies";
@@ -10,13 +11,19 @@
     <thead>
     <tr>
         <th>Movie</th>
+        <th>Genre</th>
+        <th>Release Date</th>
+        <th>In Stock</th>
     </tr>
     </thead>
     <tbody>
     @foreach (var movie in Model)
     {
         <tr>
-            <td>@movie.Name</td>
+            <td>@Html.ActionLink(movie.Name, "Details", "Movies", new {id = movie.Id}, null)</td>
+            <td>@movie.Genre</td>
+            <td>@movie.ReleaseDate.Value.ToString("MMMM yyyy")</td>
+            <td>@movie.Stock</td>
         </tr>
     }
     </tbody>
