Add and Edit Customer Functionality

--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.Ajax.Utilities
+@using Vidly.Models
 @model Vidly.Models.Customer
 
 @{
@@ -13,6 +14,7 @@
     <li>Membership Type: @Model.MembershipType.Name</li>
     @if( Model.BirthDate != null) {
 
-    <li>Birth Date: @Model.BirthDate.Value.ToShortDateString()</li>
+        <li>Birth Date: @Model.BirthDate.Value.ToShortDateString()</li>
     }
 </ul>
+
