--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -18,6 +18,7 @@ else
         <tr>
             <th>Customer</th>
             <th>Membership Type</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody> 
@@ -26,9 +27,13 @@ else
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Details", "Customers", new { id = customer.Id }, null)</td>
                 <td>@customer.MembershipType.Name</td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", "Customers", new { id = customer.Id }, null)</td>
+
                 
             </tr>
         }
         </tbody>
     </table>
+    @Html.ActionLink("Add New Customer", "New", "Customers", new {@class = "btn btn-primary"})
 }
