--- a/Vidly/Views/Films/Details.cshtml
+++ b/Vidly/Views/Films/Details.cshtml
@@ -1,16 +1,16 @@
-﻿@model Vidly.Models.Movie
+﻿@model Vidly.Models.Film
 
 @{
     ViewBag.Title = "Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<span>@Html.ActionLink("<< Movies", "Index", "Movies")</span>
+<span>@Html.ActionLink("<< Movies", "Index", "Films")</span>
 
 <h2>@Model.Name</h2>
 
 <ul>
-    <li>Genre: @Model.Genre</li>
+    <li>Genre: @Model.Zanr.Name</li>
     <li>Release Date: @Model.ReleaseDate.Value.ToLongDateString()</li>
     <li>Date Added: @Model.DateAdded.Value.ToLongDateString()</li>
     <li>In Stock: @Model.Stock</li>
